--- a/index.html
+++ b/index.html
@@ -2,23 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=subfolder/index.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Index</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            overflow: hidden;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+    <title>Redirecting...</title>
 </head>
 <body>
-    <iframe src="src/index.html" title="Pemon"></iframe>
+    <p>If you are not redirected, <a href="src/index.html">click here</a>.</p>
 </body>
 </html>
